<resources>
    <string name="app_name">Future Days</string>
    <string name="title_activity_main">Future Days</string>
    <string name="action_settings">Settings</string>
    <string name="new_item">Add item</string>
    <string name="empty_list">There are no items</string>
    <string name="empty_list_past">There are no past items</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="num_days">%1s days</string>
    <string name="item_title_label">Title</string>
    <string name="item_title_hint">Please enter a title</string>
    <string name="item_details_hint">Enter the details</string>
    <string name="item_autodelete_label">Automatically delete after date</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_delete">Delete item?</string>
    <string name="future_items">Upcoming</string>
    <string name="past_items">Past</string>
    <string name="item_saved">Item saved</string>
</resources>
